    * dnsmasq 2.42
    * espeak 1.37
    * obexftp 0.22rc9
    * php 5.2.6
    * privoxy 3.0.8
    * streamripper 1.63.4
    * stunnel 4.25
    * transmission 1.22
    * wget 1.11.3
    * xrelayd 0.2.1pre2    

- Remove packages, libs, modules, tools:

- Firmware updates:

- BusyBox:
    * updated to 1.10.2

- Web interface:

- Other stuff:
    * kernel patch for multiple ftdi devices

=== release Freetz-1.0 ===

- Build system:
    * adapted all packages to new macro style
        + please read make/README.Makefile for further instructions
        + look at make/Makefile.in for implementation
        + use global config.cache (make/config.cache) for all configure scripts
        + use macro for replacing 'libdir=/usr/lib' in *.la files
    * toolchains: Add menuconfig option to build static toolchains
    * kernel toolchain:
        + don't use crosstool to build kernel toolchain
        + update kernel toolchain to version 3.4.6 (same version as AVM)
        + use Binutils 2.17.50.0.17 for kernel toolchain
    * target toolchain:
        + uclibc: disable UCLIBC_HAS_FOPEN_LARGEFILE_MODE even if LFS is enabled
        + add uClibc-0.9.29 (doesn't work realy good and will be revised for
          next release) 
    * download toolchain:
        + update because of above changes
    * Add squashfs3 utils
        + use squashfs3 for 7270 squashfs and if "replace kernel" is selected
          We have a kernel patch that makes 2.6.13.1 squashfs3 aware. Main
          benefit of squashfs3 are blocksize larger than 64kb. But these
          doesn't work with AVM 7270 stock kernel.
    * fakeroot: bump version to 1.9.2, put archive on dsmod.magenbrot.net to
      avoid being forced to version bumps if version becomes unavailable

- New tools and hooks:

- New patches (read online help for more info):
    * multid wait
    * remove annex firmware files (only 7270)
    * remove dsld
    * remove mediasrv
    * remove telephony