@@ -47,6 +47,7 @@ Latest changes:
 
 - Other stuff:
     * kernel patch for multiple ftdi devices
+    * bfusb kernel driver and firmware for the AVM BlueFRITZ! USB stick
 
 === release Freetz-1.0 ===
 
